welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: missing arguments for method weekDay in class alarmClock;
follow this method with `_' if you want to treat it as a partially applied function
		if(weekDay)
                   ^alarmClock:16: error: not found: value weekday
		if(weekday)
                   ^alarmClock:29: error: not found: value weekdayBool
		weekdayBool = false;	
                ^